--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-    "name": "VIHANA MD",
+    "name": "SASHIKA MD",
     "description": "whatsapp md bot build with nodejs",
     "repository": "https://github.com/zim-bot/zimbot-v2",
-    "logo": "https://telegra.ph/file/88d6fdeff08bbc4945901.jpg",
+    "logo": "https://i.ibb.co/CPrhT7c/20220808-170812.png",
     "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
     "env": {
   
@@ -81,25 +81,25 @@
 "OWNER_NUMBER" :{
     "description" : "TYPE OWNER NUMBER",
     "required" : true,
-  "value" : "947634278433"
+  "value" : "94752836001"
     },
       
 "OWNER_NUMBER2" :{
     "description" : "TYPE ANY NUMBER",
     "required" : true,
-  "value" : "947634278433"
+  "value" : "94752836001"
     },
     
 "BOT_NAME" :{
     "description" : "TYPE BOT NAME",
     "required" : true,
-  "value" : "ᴠɪʜͥᴀɴͣɢͫᴀ ʏᴛ"
+  "value" : "𝗦𝗔𝗦𝗛𝗜𝗞𝗔 𝗠𝗗 𝗕𝗢𝗧"
     },
       
 "OWNER_NAME" :{
     "description" : "TYPE OWNER NAME",
     "required" : true,
-  "value" : "ᴠɪʜͥᴀɴͣɢͫᴀ ʏᴛ"
+  "value" : "𝗦𝗔𝗦𝗛𝗜𝗞𝗔 𝗠𝗗"
     },
       
 "GROUP_LINK" :{
@@ -117,19 +117,19 @@
 "PACK_NAME" :{
     "description" : "TYPE ANY NAME",
     "required" : true,
-  "value" : "STICKER BY VIHANGA MD"
+  "value" : "STICKER BY SASHIKA MD"
 },
   
 "CAP_NAME" :{
     "description" : "TYPE ANY NAME",
     "required" : true,
-  "value" : "*BY VIHANGA MD*"
+  "value" : "*BY SASHIKA MD*"
 },
     
 "IMG_URL" :{
     "description" : "UPLOAD YOURE PHOTO TO IMGBB AND TYPE URL",
     "required" : true,
-  "value" : "https://telegra.ph/file/88d6fdeff08bbc4945901.jpg"
+  "value" : "https://i.ibb.co/CPrhT7c/20220808-170812.png"
 },
   
   "YT_URL" :{
